--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
+    dataBinding {
+        enabled = true
+    }
     buildFeatures {
         viewBinding true
     }
@@ -49,6 +52,7 @@ dependencies {
     // implementation 'com.github.crafttalk:crafttalk-android-sdk:1.2.3'
     //implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+    implementation project(":chat")
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'androidx.core:core-ktx:1.13.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
@@ -64,6 +68,4 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.3.0'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
-    implementation project(":chat")
 }
