--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,17 +2,11 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    //id 'com.google.devtools.ksp'
-    //id 'kotlin-android-extensions'
 }
-//apply plugin: 'com.android.application'
-//apply plugin: 'kotlin-android'
-//apply plugin: 'kotlin-android-extensions'
 
 android {
     namespace "com.crafttalk.sampleChat"
     compileSdkVersion 34
-    //buildToolsVersion "29.0.3"
     defaultConfig {
         applicationId "com.crafttalk.sampleChat"
         minSdkVersion 21
@@ -32,9 +26,6 @@ android {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
-    dataBinding {
-        enabled = true
-    }
     buildFeatures {
         viewBinding true
     }
@@ -48,24 +39,21 @@ ext {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    // implementation 'com.github.crafttalk:crafttalk-android-sdk:1.2.3'
-    //implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
-    implementation project(":chat")
+    implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'androidx.core:core-ktx:1.13.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
     implementation 'com.google.android.material:material:1.12.0'
-    implementation "androidx.multidex:multidex:2.0.1"
+    implementation 'androidx.multidex:multidex:2.0.1'
     implementation "com.github.bumptech.glide:glide:4.16.0"
     implementation "com.squareup.retrofit2:retrofit:2.11.0"
     implementation "com.squareup.retrofit2:converter-gson:2.11.0"
     implementation "com.google.firebase:firebase-messaging-ktx:24.1.0"
     implementation "com.google.firebase:firebase-analytics-ktx:22.1.2"
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test:rules:1.3.0'
-    androidTestImplementation 'androidx.test:runner:1.3.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation project(":chat")
 }
