--- a/chat/build.gradle
+++ b/chat/build.gradle
@@ -1,5 +1,3 @@
-
-//apply plugin: 'com.google.devtools.ksp'
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 //apply plugin: 'kotlin-android-extensions'
@@ -10,7 +8,6 @@ apply plugin: 'maven-publish'
 android {
     namespace "com.crafttalk.chat"
     compileSdkVersion 34
-    //buildToolsVersion "29.0.3"
 
     defaultConfig {
         minSdkVersion 21
@@ -67,53 +64,63 @@ ext {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: "libs", include: ["*.jar"])
 
-    implementation "androidx.activity:activity-ktx:1.9.3"
     implementation "androidx.core:core-ktx:1.13.0"
-    //implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.appcompat:appcompat:1.7.0"
     implementation "androidx.constraintlayout:constraintlayout:2.2.0"
     implementation "androidx.recyclerview:recyclerview:1.3.2"
+    implementation "androidx.fragment:fragment-ktx:1.8.0"
+    implementation "androidx.activity:activity-ktx:1.9.0"
     implementation "com.google.android.material:material:1.12.0"
-    implementation "androidx.fragment:fragment-ktx:1.8.5"
-    // DI
     implementation "com.google.dagger:dagger:2.52"
     kapt "com.google.dagger:dagger-compiler:2.52"
+
     // Room
     implementation "androidx.room:room-runtime:$roomVersion"
     kapt "androidx.room:room-compiler:$roomVersion"
+
     // Glide
     implementation "com.github.bumptech.glide:glide:4.13.2"
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.9.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
+
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.11.0"
     implementation "com.squareup.retrofit2:converter-gson:2.11.0"
-//    implementation "com.squareup.retrofit2:converter-scalars:$retrofitVersion"
+
     // OkHttp
     implementation "com.squareup.okhttp3:okhttp:4.12.0"
     implementation "com.squareup.okhttp3:logging-interceptor:4.12.0"
+
     // Socket
     implementation "io.socket:socket.io-client:2.1.1"
+
     // ViewModel
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.1"
+
     // LiveData
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.8.7"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.8.1"
+
     // Saved state module for ViewModel
-    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.8.7"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.8.1"
+
     // Push
     implementation "com.google.firebase:firebase-messaging-ktx:24.1.0"
     implementation "com.google.firebase:firebase-analytics-ktx:22.1.2"
+
     // Pagination
-    implementation "androidx.paging:paging-runtime-ktx:3.3.4"
+    implementation "androidx.paging:paging-runtime-ktx:3.3.0"
+
     // Zooming photo
     implementation "com.github.chrisbanes:PhotoView:$photoViewVersion"
+
     // EncryptedSharedPreferences
-    implementation "androidx.security:security-crypto:$securityPreferencesVersion"
+    implementation "androidx.security:security-crypto:1.1.0-alpha03"
+
     // mask
-    implementation "com.github.RedMadRobot:input-mask-android:$inputMaskVersion"
+    implementation "com.redmadrobot:input-mask-android:6.0.0"
 
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test:rules:$testRulesVersion"
